--- a/components/zcu43ineu-go/overlays/development/deployment-patch.yaml
+++ b/components/zcu43ineu-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zcu43ineu-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-0357972cbe.x8xz.p3.openshiftapps.com/rhtap/rhtap-qe:69699d8b9b056d1df74f6a1216aaf3e08d55220c@sha256:c826210c2e3db3bc47b43cb6147ffc276d91ba13caecfc4259c648e0e17e6f59
+          name: container-image
